# cxxString

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
addition/: CMakeLists.txt  appendto.cc
aggregate/: CMakeLists.txt  join.cpp  repeat.cpp
charclasses/: CMakeLists.txt  predicates.cc  predicates.hh
comparison/: CMakeLists.txt  README.md  collate.cpp  equal.cpp
conversion/: CMakeLists.txt  README.md  from_numeric.cpp  from_time.cpp  lower_upper_cases.cpp  parse_to_numeric.cpp  to_readable.cpp  tointeger.cpp  tolower_toint.cpp
creation/: CMakeLists.txt  README.md  create_from_cstring.cpp  modern_creation.cpp  preprocessor_stringify.cpp
erasing/: CMakeLists.txt  delete_chars.cpp
formatting/: CMakeLists.txt  README.md  cxx20_format.cpp  ostream_format.cpp  print_raw_bytes.cpp  printf.cpp
inplace/: CMakeLists.txt  array_like_modification.cc  capitalize.cpp  lr_strip.cpp  replaceChars.cpp  replaceSubstrs.cpp
iteration/: CMakeLists.txt  iterlines.cpp
literals/: CMakeLists.txt  README.md  custom_literal.cpp  embedded_text_file.cpp  multi_lines.cpp  r_string.cpp
parsing/: CMakeLists.txt  README.md  boost_spirit.cpp  parse_csl.cpp  parse_exclude_comments.cpp  parse_kv_pairs.cpp  parse_struct.cpp  read_column_separated_text.cpp
partition/: CMakeLists.txt  boost_split.sh  fast_split.cpp  find_split.cpp  python_style_split.cpp  splitString.cpp  splitToPair.cpp  substring.cpp  view_split.cpp
regex/: CMakeLists.txt  capture_groups.cpp  capture_groups_test.sh  compile_time_regex.cpp  ctre_test.cpp  one_liner_test.cpp  option_modifiers.cpp  option_modifiers_test.sh  plate_number_extraction.cpp  regex_iterator.cpp  regex_iterator_test.sh  sregex_token_iterator.cpp  sregex_token_iterator_test.sh  unmatched_parts.cpp  varlength_lookbehind.cpp  with_cstring.cpp
regex/group/: capture_groups.cpp
regex/iterator/: regex_iterator.cpp  sregex_token_iterator.cpp
regex/lookaround/: lookbehind.cpp  varlength_lookbehind.cpp
regex/modifiers/: option_modifiers.cpp
regex/replace/: capitalize_words.cpp  replace_words.cpp
resources/: text
search/: CMakeLists.txt  README.md  endswith.cpp  find_substr.cpp  find_substr_searcher.cpp  palindrome.cpp  split.cpp  word_count.cpp
str_as_container/: CMakeLists.txt  README.md  bitset.cpp
stream/: CMakeLists.txt  cin_getline.cpp  cin_getline_test.sh  echo_app.sh  echo_program.cc  echo_program_test.sh  istream_iterator.cpp  istream_iterator_test.sh  istreambuf_iterator.cpp  istreambuf_iterator_test.sh  locale.cpp  ostream_iterator.cpp  overloading.cpp  read_column_separated_text.cpp  strstream_hexformat.cpp  strstream_padding.cpp
string_view/: CMakeLists.txt  README.md  creation.cpp  ownership.cpp
strip/: CMakeLists.txt  README.md  strip_space.cpp
